# PASTIS

./: .gitmodules  CMakeLists.txt
docs/: guide
include/: Constants.hpp  DistributedPairwiseRunner.hpp  ScoreMat.hpp  Utils.hpp
include/kmer/: CommonKmers.hpp
include/pw/: BswGPUAligner.hpp  PairwiseFunction.hpp
src/: Constants.cpp  DistributedFastaData.cpp  DistributedPairwiseRunner.cpp  FastaData.cpp  ScoreMat.cpp  main.cpp
src/pw/: BswGPUAligner.cpp
